--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-status-codes": "^2.3.0",
-    "nodemon": "^3.1.0"
+    "mongoose": "^8.3.2",
+    "nodemon": "^3.1.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
